--- a/src/app/inventory/interaction-detail-view-dialog/interaction-detail-view-dialog.component.html
+++ b/src/app/inventory/interaction-detail-view-dialog/interaction-detail-view-dialog.component.html
@@ -3,7 +3,7 @@
   <div class="dialogdiv text-center my-3">
     <span class="header-Text">Interaction ID:{{data?.transactionNumber}}</span></div>
 
-<div class="row">
+<!-- <div class="row">
   <div class="col-md-12">
     <div class="form-group">
         <mat-label> Disposition</mat-label>
@@ -17,14 +17,17 @@
         </mat-select>
     </div>
 </div>
-</div>
+</div> -->
 </mat-dialog-content>
 
 
 <mat-dialog-actions align="center">
   <div class="col-md-12 mt-1">
-    <button (click)="submit()" type="button" class="btn btn-success">
+    <!-- <button (click)="submit()" type="button" class="btn btn-success">
       <i class="fas fa-save"></i> Close Call
+    </button> -->
+    <button (click)="submit()" type="button" class="btn btn-success">
+      <i class="fas fa-save"></i> Done
     </button>
   </div>
 </mat-dialog-actions>
