--- a/src/app/inventory/interaction-history/interaction-history.component.scss
+++ b/src/app/inventory/interaction-history/interaction-history.component.scss
@@ -1,4 +1,5 @@
-// .table {
-//     display: table;
-//     height: auto;
-// }
+.descDiv{
+    height: 100px;
+    overflow: auto;
+    padding: 0 auto;
+}
