claim fixes user tab, adminstrator

--- a/src/app/customer/customer-list/customer-list.component.html
+++ b/src/app/customer/customer-list/customer-list.component.html
@@ -6,7 +6,7 @@
             </div>
         </div>
         <div class="col-md-auto col-sm-auto col-auto">
-            <button *hasClaim="'CNT_VIEW_CONTACT'" class="btn blue-btn btn-sm m-right-10"
+            <button *hasClaim="'CNT_ADD_CONTACT'" class="btn blue-btn btn-sm m-right-10"
                 [routerLink]="['/customer/addItem']">
                 <i class="fas fa-plus"></i> Add Contact
             </button>
