--- a/src/app/inventory/interaction-attachments-list/interaction-attachments-list.component.html
+++ b/src/app/inventory/interaction-attachments-list/interaction-attachments-list.component.html
@@ -68,11 +68,6 @@
 <div class="table-responsive" *ngIf="emailDocumentList?.length && !isLoading">
     <table [dir]="langDir" mat-table [dataSource]="emailDocumentList" multiTemplateDataRows
         class="table table-bordered table-hover">
-<!--     
-        <ng-container matColumnDef="transactionNo">
-            <th mat-header-cell *matHeaderCellDef>Interaction Id </th>
-            <td mat-cell *matCellDef="let element"> {{element?.intercationID}} </td>
-        </ng-container> -->
         <ng-container matColumnDef="fileName">
             <th mat-header-cell *matHeaderCellDef>File Name </th>
             <td mat-cell *matCellDef="let element"> <span class="downloadFile" (click)="downloadEmailFile(element)">{{element.attchmntFileName}}</span> </td>
@@ -91,7 +86,7 @@
         </ng-container>
         <ng-container matColumnDef="createdByName">
             <th mat-header-cell *matHeaderCellDef>Upload By</th>
-            <td mat-cell *matCellDef="let element"> {{element.createdBy}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.createdByName}} </td>
         </ng-container>
         <ng-container matColumnDef="date">
             <th mat-header-cell *matHeaderCellDef>Upload Date</th>
