--- a/src/app/core/sidebar/sidebar.component.html
+++ b/src/app/core/sidebar/sidebar.component.html
@@ -40,8 +40,7 @@
           </li>
         </ul>
 
-        <!-- [routerLink]="['/interactions']" -->
-        <li *hasClaim="['INT_ADD_INTERACTION','INT_VIEW_INTERACTION' , 'INT_DELETE_INTERACTION','INT_UPDATE_INTERACTION']" id="InteractionsHeading" aria-expanded="true" aria-controls="collapseOne"
+        <li *hasClaim="['INT_ADD_INTERACTION','INT_VIEW_INTERACTION','INT_DELETE_INTERACTION','INT_UPDATE_INTERACTION']" id="InteractionsHeading" aria-expanded="true" aria-controls="collapseOne"
         data-toggle="collapse" data-target="#Interactions"
         class="collapsed">
           <a class="nav-link" [ngClass]="{'active': currentUrl == 'interactions'}" >
@@ -59,14 +58,14 @@
             <p>All List</p>
           </a>
         </li>
-        <li *hasClaim="['INT_ADD_INTERACTION','INT_VIEW_MY_INTERACTION']" class="nav-item">
+        <li *hasClaim="'INT_VIEW_MY_INTERACTION'" class="nav-item">
           <a [routerLink]="['/interactions/My-interaction']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"
             class="nav-link">
             <i class="far fa-list-alt nav-icon"></i>
             <p>My list </p>
           </a>
         </li>
-        <li *hasClaim="['INT_ADD_INTERACTION','INT_VIEW_TEAM_INTERACTION']" class="nav-item">
+        <li *hasClaim="'INT_VIEW_TEAM_INTERACTION'" class="nav-item">
           <a [routerLink]="['/interactions/Team-interaction']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"
             class="nav-link">
             <i class="far fa-list-alt nav-icon"></i>
@@ -87,7 +86,7 @@
             <p>L0 Email</p>
           </a>
         </li>
-        <li *hasClaim="'INT_VIEW_INTERACTION'" class="nav-item">
+        <li *hasClaim="'INT_VIEW_MANNUALASSIGN'" class="nav-item">
           <a [routerLink]="['/interactions/assign-interaction']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"
             class="nav-link">
             <i class="fas fa-plus-square nav-icon"></i>
@@ -301,7 +300,8 @@
         </ul>
         <li id="ProductHeading" aria-expanded="true" aria-controls="collapseOne" data-toggle="collapse"
           data-target="#ProductCategory" class="collapsed"
-          *hasClaim="['MST_VIEW_LOOKUP','PRO_MANAGE_BRAND','PRO_MANAGE_WAREHOUSE','PRO_MANAGE_BARCODE']">
+          >
+          <!-- *hasClaim="['MST_VIEW_LOOKUP','PRO_MANAGE_BRAND','PRO_MANAGE_WAREHOUSE','PRO_MANAGE_BARCODE']" -->
           <a class="nav-link" [ngClass]="{'active': currentUrl == 'product'}">
             <i class="nav-icon fas fa-cubes"></i>
             <span>{{'Administrator' | translate}}</span>
@@ -310,67 +310,7 @@
         </li>
         <ul class="sub-menu collapse" [ngClass]="{'show': currentUrl == 'product'}" id="ProductCategory"
           aria-labelledby="ProductHeading" data-parent="#accordionExample">
-          <!-- <li *hasClaim="['MST_VIEW_LOOKUP','']" class="nav-item">
-            <a [routerLink]="['/products']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"
-              class="nav-link">
-              <i class="far fa-list-alt nav-icon"></i>
-              <p>{{'LIST' | translate}}</p>
-            </a>
-          </li>
-          <li *hasClaim="'MST_VIEW_LOOKUP'" class="nav-item">
-            <a [routerLink]="['/products/add']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"
-              class="nav-link">
-              <i class="fas fa-plus-square nav-icon"></i>
-              <p>{{'ADD_NEW' | translate}}</p>
-            </a>
-          </li> -->
-          <!-- <li *hasClaim="'PRO_MANAGE_PRO_CAT'" class="nav-item">
-            <a [routerLink]="['/product-category']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"
-              class="nav-link">
-              <i class="far fa-list-alt nav-icon"></i>
-              <p>{{'PRODUCT_CATEGORY' | translate}}</p>
-            </a>
-          </li>
-          <li *hasClaim="'PRO_MANAGE_TAX'" class="nav-item">
-            <a [routerLink]="['/tax']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"
-              class="nav-link">
-              <i class="far fa-list-alt nav-icon"></i>
-              <p>{{'TAX' | translate}}</p>
-            </a>
-          </li> -->
-                    <!-- yadwinder add links for routing and  comment old routes-->
-        <!-- <li class="nav-item" *hasClaim="'PRO_MANAGE_UNIT'">
-            <a [routerLink]="['/unitConversation']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"
-              class="nav-link">
-              <i class="far fa-list-alt nav-icon"></i>
-              <p>{{'UNIT_CONVERSATION' | translate}}</p>
-            </a>
-          </li>
-          <li *hasClaim="'PRO_MANAGE_BRAND'" class="nav-item">
-            <a [routerLink]="['/brand']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"
-              class="nav-link">
-              <i class="far fa-list-alt nav-icon"></i>
-              <p>{{'BRAND' | translate}}</p>
-            </a>
-          </li>
-          <li *hasClaim="'PRO_MANAGE_WAREHOUSE'" class="nav-item">
-            <a [routerLink]="['/warehouse']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"
-              class="nav-link">
-              <i class="far fa-list-alt nav-icon"></i>
-              <p>{{'WAREHOUSE' | translate}}</p>
-            </a>
-          </li>  -->
-
-          <!-- Fixme just using old hasClaim please change it after get new one-->
-          <!-- <li class="nav-item" *hasClaim="'PRO_MANAGE_UNIT'">
-            <a [routerLink]="['/interaction']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"
-              class="nav-link">
-              <i class="far fa-list-alt nav-icon"></i>
-               <p>{{'UNIT_CONVERSATION' | translate}}</p> 
-              <p>Interaction Type</p>
-            </a>
-          </li> -->
-          <li class="nav-item" *hasClaim="['MST_VIEW_STATUS','MST_ADD_STATUS','MST_UPDATE_STATUS','MST_DELETE_STATUS']">
+          <li class="nav-item" *hasClaim="['MST_VIEW_STATUS']">
             <a [routerLink]="['/interaction/interaction-status']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"
               class="nav-link">
               <i class="far fa-list-alt nav-icon"></i>
@@ -391,7 +331,7 @@
               <p>Problem Master</p>
             </a>
           </li>
-          <li class="nav-item" *hasClaim="['MST_CTI_ADD_DISPOSTION']">
+          <li class="nav-item" *hasClaim="['MST_CTI_ADD_DISPOSTION','MST_CTI_DISPOSTION']">
             <a [routerLink]="['/lookup12']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"
               class="nav-link">
               <i class="far fa-list-alt nav-icon"></i>
@@ -405,14 +345,14 @@
               <p>Calender Master</p>
             </a>
           </li>
-          <li class="nav-item" *hasClaim="'MST_VIEW_CATEGORY'">
+          <li class="nav-item" *hasClaim="'MST_VIEW_ESCALMATRIX'">
             <a [routerLink]="['/escalation']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"
               class="nav-link">
               <i class="far fa-list-alt nav-icon"></i>
               <p>Escalation Matrix</p>
             </a>
           </li>
-          <li class="nav-item" *hasClaim="'MST_VIEW_CATEGORY'">
+          <li class="nav-item" *hasClaim="['INT_BULK_INTERACTION_CLOSER','INT_BULK_INTERACTION_CLOSER_HISTORY']">
             <a [routerLink]="['/interaction/interaction-bulk-closer']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"
               class="nav-link">
               <!-- <i class="far fa-list-alt nav-icon"></i> -->
@@ -420,59 +360,14 @@
               <p>Interaction Bulk Closer</p>
             </a>
           </li>
-          <!-- <li class="nav-item" *hasClaim="'MST_VIEW_CATEGORY'">
-            <a [routerLink]="['/cti-users']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"
-              class="nav-link">
-              <i class="nav-icon fas fa-users-cog"></i>
-              <p>Cti Users Master</p>
-            </a>
-          </li> -->
-          <li class="nav-item" *hasClaim="['MST_ADD_LOOKUP','MST_UPDATE_LOOKUP']">
+          <li class="nav-item" *hasClaim="['MST_ADD_LOOKUP','MST_UPDATE_LOOKUP','MST_VIEW_LOOKUP']">
             <a [routerLink]="['/lookup']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"
               class="nav-link">
-              <!-- <i class="far fa-list-alt nav-icon"></i> -->
               <i class="nav-icon fas fa-users-cog"></i>
-              <!-- <p>{{'UNIT_CONVERSATION' | translate}}</p> -->
               <p>Look up</p>
             </a>
           </li>
-          
-          <!-- yadwinder add links for routing end -->
-          <!-- <li *hasClaim="'PRO_MANAGE_BARCODE'" class="nav-item">
-            <a [routerLink]="['/Barcode']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"
-              class="nav-link">
-              <i class="far fa-list-alt nav-icon"></i>
-              <p>{{'GENRATE BAR CODE' | translate}}</p>
-            </a>
-          </li> -->
-
         </ul>
-        <!-- <li id="LookupHeading" aria-expanded="true" aria-controls="collapseOne"
-        *hasClaim="['MST_VIEW_LOOKUP']" data-toggle="collapse" data-target="#Lookup"
-        class="collapsed">
-        <a class="nav-link" [ngClass]="{'active': currentUrl == 'lookup'}">
-          <i class="nav-icon fas fa-users-cog"></i>
-          <span>Lookup</span>
-          <span class="fas fa-angle-down rotate-arrow ml-auto"></span>
-        </a>
-      </li> -->
-      <!-- <ul class="sub-menu collapse" id="Lookup" [ngClass]="{'show': currentUrl == 'lookup'}"
-        aria-labelledby="LookupHeading" data-parent="#accordionExample">
-        <li *hasClaim="['MST_ADD_LOOKUP','MST_UPDATE_LOOKUP']" class="nav-item">
-          <a [routerLink]="['/lookup']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"
-            class="nav-link">
-            <i class="far fa-list-alt nav-icon"></i>
-            <p>{{'LIST' | translate}}</p>
-          </a>
-        </li>
-        <li *hasClaim="['MST_ADD_LOOKUP','MST_UPDATE_LOOKUP']" class="nav-item">
-          <a [routerLink]="['/lookup/add']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"
-            class="nav-link">
-            <i class="fas fa-plus-square nav-icon"></i>
-            <p>{{'ADD_NEW' | translate}}</p>
-          </a>
-        </li>
-      </ul> -->
         <li id="ReminderHeading" aria-expanded="true" aria-controls="collapseOne"
           *hasClaim="['REM_VIEW_REMINDERS','REM_ADD_REMINDER']" data-toggle="collapse" data-target="#Reminder"
           class="collapsed">
