--- a/src/app/customer/customer-detail/customer-detail.component.html
+++ b/src/app/customer/customer-detail/customer-detail.component.html
@@ -61,7 +61,7 @@
                         </mat-select>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <!-- <div class="col-md-4 d-none">
                     <div class="form-group">
                         <mat-label>Category</mat-label>
                         <mat-select formControlName="category" (selectionChange)="onCatChange($event)"
@@ -77,7 +77,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 d-none">
                     <div class="form-group">
                         <mat-label>Sub Category</mat-label>
                         <mat-select [disabled]="customerForm.get('category')?.value == ''" formControlName="subCategory"
@@ -92,7 +92,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <div class="col-md-4">
                     <div class="form-group ">
                         <mat-label class="text-danger">First Name *</mat-label>
@@ -162,16 +162,15 @@
                     </div>
                 </div>
 
-                <div class="col-md-4">
+                <!-- <div class="col-md-2">
                     <div class="form-group ">
                         <mat-label>No. Of Interactions</mat-label>
                         <input formControlName="noOfInteractions" class="form-control" [readOnly]="true" type="number">
                     </div>
-                </div>
-                <!-- <div class="col-md-4"> -->
-                <div class="mt-4 col-md-4">
+                </div> -->
+                <div class="mt-4 col-md-4 text-center">
                     <div *ngIf="!customer" class="button">
-                        <button *hasClaim="['CNT_ADD_CONTACT','CNT_UPDATE_CONTACT']" type="submit"
+                        <button *hasClaim="['CNT_ADD_CONTACT','INT_ADD_INTERACTION',]" type="submit"
                         class="py-2 btn btn-success btn-sm m-right-10">
                         <i class="fas fa-save"></i>
                         Save + Add Interaction
