--- a/src/app/escalation/escalation-list/escalation-list.component.html
+++ b/src/app/escalation/escalation-list/escalation-list.component.html
@@ -5,7 +5,7 @@
                 <h1>Escalation Matrix</h1>
             </div>
         </div>
-        <!-- <div *hasClaim="'MST_ADD_QUE'" class="col-md-auto col-sm-auto col-auto">
+        <!-- <div *hasClaim="'MST_ADD_ESCALMATRIX'" class="col-md-auto col-sm-auto col-auto">
             <button class="btn blue-btn btn-sm m-right-10" [routerLink]="['/team/add']">
                 <i class="fas fa-plus"></i>
                 Add Escalation Matrix
@@ -30,12 +30,12 @@
         <ng-container matColumnDef="action">
             <th style="width:30%" mat-header-cell *matHeaderCellDef>{{'ACTION' | translate}} </th>
             <td style="width:30%" mat-cell *matCellDef="let element">
-                <button *hasClaim="'MST_UPDATE_QUE'" routerLink="/team/edit/{{element.id}}"
+                <button *hasClaim="'MST_EDIT_ESCALMATRIX'" routerLink="/team/edit/{{element.id}}"
                     class="btn btn-success btn-sm m-right-10" type="button">
                     <i class="las la-pen"></i>
                     {{'EDIT' | translate}}
                 </button>
-                <button *hasClaim="'MST_DELETE_QUE'" (click)="deleteQueue(element)" class="btn btn-danger btn-sm"
+                <button *hasClaim="'MST_DELETE_ESCALMATRIX'" (click)="deleteQueue(element)" class="btn btn-danger btn-sm"
                     type="button">
                     <i class="las la-trash"></i>
                     {{'DELETE' | translate}}
