--- a/src/app/inventory/inventory-properties/inventory-properties.component.html
+++ b/src/app/inventory/inventory-properties/inventory-properties.component.html
@@ -12,7 +12,7 @@
         </div>
         <div class="" *ngIf="resValue?.ticketType =='Ticket Created' || resValue?.ticketType == 2">
 
-            <button type="button" (click)="onSubmit()" class="btn btn-success btn-md m-right-10"><i
+            <button type="button" *hasClaim="'INT_UPDATE_INTERACTION'"  (click)="onSubmit()" class="btn btn-success btn-md m-right-10"><i
                     class="fas fa-save"></i>
                 {{"SAVE" | translate}}</button>
             <button type="button" class="btn btn-danger btn-md" [routerLink]="['/interactions']"><i
@@ -98,7 +98,7 @@
                         <!-- <mat-label> {{'TICKET_TYPE' | translate}}</mat-label> -->
                         <mat-label> Interaction Status</mat-label>
                         <mat-select
-                            [attr.disabled]="contactSelectedType == 'FCR' || contactSelectedType == 'Ticket Created'"
+                            [disabled]="addInventoryForm.get('ticketType')?.value == 1"
                             (selectionChange)="setStatusName($event)" [dir]="langDir" formControlName="statusId"
                             class="form-control">
                             <mat-option *ngFor="let status of statusList" [value]="status.id">
@@ -115,7 +115,7 @@
                 <div class="col-md-4">
                     <div class="form-group">
                         <mat-label>Interaction Sub Status</mat-label>
-                        <mat-select (selectionChange)="subStatusChange($event)" [dir]="langDir"
+                        <mat-select [disabled]="addInventoryForm.get('ticketType')?.value == 1" (selectionChange)="subStatusChange($event)" [dir]="langDir"
                             formControlName="subStatusId" class="form-control">
                            <ng-container *ngIf="addInventoryForm.get('statusId')?.value==2">
                                <mat-option *ngFor="let data of subStatusList" [disabled]="addInventoryForm.get('statusId')?.value==2 && data?.name !='ACI'" [value]="data.id">
@@ -127,8 +127,13 @@
                                    {{data.name}}
                                 </mat-option>
                             </ng-container>
-                           <ng-container *ngIf="addInventoryForm.get('statusId')?.value==4 || addInventoryForm.get('statusId')?.value==1">
-                               <mat-option *ngFor="let data of subStatusList" [disabled]="addInventoryForm.get('statusId')?.value==2 && data?.name !='ACI'" [value]="data.id">
+                           <ng-container *ngIf="addInventoryForm.get('statusId')?.value==4">
+                               <mat-option *ngFor="let data of subStatusList" [disabled]="data?.name !='ACI'" [value]="data.id">
+                                   {{data.name}}
+                                </mat-option>
+                            </ng-container>
+                           <ng-container *ngIf="addInventoryForm.get('statusId')?.value==1">
+                               <mat-option *ngFor="let data of subStatusList" [disabled]="data?.name =='Response Received From Email'|| data?.name =='ReOpen'|| data?.name =='Response Received From GRP'" [value]="data.id">
                                    {{data.name}}
                                 </mat-option>
                             </ng-container>
@@ -158,7 +163,7 @@
                 <div class="col-md-4">
                     <div class="form-group">
                         <mat-label>Category</mat-label>
-                        <mat-select (selectionChange)="onCatChange($event)" [dir]="langDir" formControlName="categoryId"
+                        <mat-select [disabled]="addInventoryForm.get('ticketType')?.value == 1" (selectionChange)="onCatChange($event)" [dir]="langDir" formControlName="categoryId"
                             class="form-control">
                             <mat-option *ngFor="let subCat of categoryList" [value]="subCat.id">
                                 {{subCat.name}}
@@ -175,7 +180,7 @@
                 <div class="col-md-4">
                     <div class="form-group">
                         <mat-label>Sub Category</mat-label>
-                        <mat-select formControlName="subcategoryId" class="form-control">
+                        <mat-select [disabled]="addInventoryForm.get('ticketType')?.value == 1" formControlName="subcategoryId" class="form-control">
                             <mat-option *ngFor="let subCat of subCategoryList" [value]="subCat.id">
                                 {{subCat.name}}
                             </mat-option>
@@ -257,6 +262,20 @@
                             class="text-danger">
                             Please enter docket number
                         </mat-error>
+                    </div>
+                </div>
+                <div class="col-md-2">
+                    <div class="form-group">
+                        <mat-label>No Of Messages:</mat-label>
+                        <input type="text" class="form-control" id="message" [readonly]="true"
+                            formControlName="noOfMessages">
+                    </div>
+                </div>
+                <div class="col-md-2">
+                    <div class="form-group">
+                        <mat-label>Reopen Count:</mat-label>
+                        <input type="text" class="form-control" id="message" [readonly]="true"
+                            formControlName="reopenCount">
                     </div>
                 </div>
 
@@ -484,14 +503,24 @@
                 </div>
                 <div class="col-md-4">
                     <div class="form-group">
-                        <mat-label>Incident/Problem number:</mat-label>
-                        <input type="text" [readonly]="true" class="form-control" id="">
+                        <mat-label>Problem Id:</mat-label>
+                        <mat-select formControlName="problemId" class="form-control">
+                            <mat-option *ngFor="let data of problemList" [value]="data.id">
+                                {{data.problemName}}
+                            </mat-option>
+                        </mat-select>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="form-group">
                         <mat-label>Problem id description:</mat-label>
                         <input type="text" class="form-control" id="">
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <mat-label>Incident/Problem number:</mat-label>
+                        <input type="text" [readonly]="true" class="form-control" id="">
                     </div>
                 </div>
             </div>
