--- a/src/app/problem/problem/problem.component.html
+++ b/src/app/problem/problem/problem.component.html
@@ -5,7 +5,7 @@
                 <h1>Problem</h1>
             </div>
         </div>
-        <div *hasClaim="'MST_ADD_CATEGORY'" class="col-md-auto col-sm-auto col-auto">
+        <div *hasClaim="'MST_ADD_PROBLEM'" class="col-md-auto col-sm-auto col-auto">
             <button class="btn blue-btn btn-sm m-right-10" (click)="manageStatus({})">
                 <i class="fas fa-plus"></i>
                 Add Problem
